src/Input/index.scss
// Sass placeholder for styles shared between
// `textarea` and the psuedo-element that enables CSS auto growing
%shared-multiline-styles {
  line-height: 1.2;
  vertical-align: middle;
  font-weight: 400;
  line-height: normal;
  font-family: var(--font-family-body);
  border: none;
  outline: 0;
  padding: 0;
}

.nds-input {
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
  font-size: 16px;

  .nds-input-box {
    border: 1px solid var(--color-lightGrey);
    background: var(--color-white);
    position: relative;
    width: 100%;
    padding: 7px 0.8em;
    border-radius: 4px;
    display: flex;
    align-items: center;

    &:focus-within {
      border: 1px solid var(--theme-primary);

      label {
        color: var(--theme-primary);
        margin-bottom: -3px;
      }
    }
  }

  .nds-input-column {
    display: flex;
    flex-direction: column-reverse;
    flex-grow: 1;
  }

  &.disabled .nds-input-box {
    pointer-events: none;
    background-color: var(--color-smokeGrey);

    input {
      color: var(--color-mediumGrey);
    }
  }

  &.error {
    .nds-input-box {
      border: 1px solid var(--color-errorDark);
    }

    label {
      color: var(--color-errorDark);
    }
  }

  &.search .nds-input-box {
    padding: 3px 0.8em;
  }

  .nds-input-icon {
    display: flex;
    font-size: 1.25em;
    padding: 0 0.3em 0 0;
    opacity: 0.5;
  }

  label {
    background: transparent;
    pointer-events: none;
    font-family: var(--font-family-body);
    font-weight: 400;
    font-size: 12px;
    color: var(--color-mediumGrey);
    line-height: 1.25;
    white-space: nowrap;
    overflow: hidden;
    margin-bottom: -3px;
  }

  .nds-input-error {
    font-size: 12px;
    font-weight: 400;
    color: var(--color-errorDark);
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    margin: 0.33em 0 0;

    svg {
      margin: -0.1em 0.4em 0 0.2em;
      height: 1.2em;
      width: 1.2em;
    }
  }

  input,
  textarea {
    background: transparent;
  }

  input {
    color: var(--color-grey);
  }

  textarea {
    @extend %shared-multiline-styles;
    color: var(--color-grey);
    width: 100%;
    resize: none;
  }

  input[type="text"],
  input[type="tel"],
  input[type="number"],
  input[type="email"],
  input[type="date"],
  input[type="password"],
  input[type="search"] {
    border: none;
    outline: 0;
    letter-spacing: 0;
    vertical-align: middle;
    font-family: var(--font-family-body);
    padding: 0;
    width: 100%;
    font-size: 16px;
  }

  input[type="text"]:placeholder-shown,
  input[type="tel"]:placeholder-shown,
  input[type="number"]:placeholder-shown,
  input[type="email"]:placeholder-shown,
  input[type="search"]:placeholder-shown,
  input[type="password"]:placeholder-shown,
  .no-label input[type="text"],
  .no-label input[type="tel"],
  .no-label input[type="number"],
  .no-label input[type="email"],
  .no-label input[type="date"],
  .no-label input[type="password"],
  .no-label input[type="search"] {
    padding: 6px 0;
    font-size: 16px;

    ~ label {
      display: none;
    }
  }

  input,
  textarea {
    &::placeholder {
      color: var(--color-mediumGrey);
      font-weight: 400;
    }
  }
}

.nds-input-multiline-grid {
  display: grid;

  &,
  & > textarea {
    max-height: 80vh; // avoid growing larger than viewport height
    overflow-wrap: anywhere; // always break line if it exceeds available width
  }

  // This pseudo-element is an auto height invisible container that
  // gets filled in with the value of the text area
  &::after {
    content: attr(data-textarea-value) " "; // space prevents jumpy updates
    white-space: pre-wrap; // match textarea default wrapping
    visibility: hidden;

    // match styling of textarea to keep things aligned
    @extend %shared-multiline-styles;
  }

  // The growth of the psuedo-element will expand the grid container.
  // The textarea will grow with it, as it is placed over the entire grid area
  &::after,
  & > textarea {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }
}

